--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Hva er et menneske.com</title>
 </head>
 <body>
-    <h1>Hva er et menneske?</h1>
+    <header>
+        <h1 id="logo">Hva er et menneske?</h1>
+        <ul id="navbar">
+            <li><a href="#">Hjem</a></li>
+            <li><a href="#">Om oss</a></li>
+            <li><a href="#">Info</a></li>
+        </ul>
+    </header>
+    
 
     <h3></h3>
 </body>
