--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li><a href="#">Info</a></li>
         </ul>
     </header>
+
+    <h1>BLÆBLÆ dette skal være capcha siden, hovedside <a href="index.html">her</a></h1>
     
 
     <h3></h3>
