--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </header>
 
-    <h1>BLÆBLÆ dette skal være capcha siden, hovedside <a href="index.html">her</a></h1>
+    <h1>BLÆBLÆ dette skal være capcha siden, hovedside <a href="main.html">her</a></h1>
     
 
     <h3></h3>
