--- a/tidslinje.html
+++ b/tidslinje.html
@@ -18,6 +18,13 @@
         </ul>
     </header>
 
+    <div class="forside" id="steinalderTop">
+        <div class="forsidetekst">
+            <h1>Steinalderen</h1>
+            <h2>År - år idk ka år??</h2>
+        </div>
+    </div>
+
     <h3></h3>
 </body>
 </html>
