--- a/main.html
+++ b/main.html
@@ -70,18 +70,15 @@
     </section>
     
    <footer>
-       <article id="">
-            <ul id="footerNav">
-                <li><a href="main.html" id="NavDef">Definisjon</a></li>
-                <li><a href="main.html#Evolusjon" id="NavEvo">Evolusjon</a></li>
-                <li><a href="main.html#Biologi" id="NavBio">Biologi</a></li>
-                <li><a href="lit.html" id="NavPsy">Psykologi</a></li>
-                <li><a href="lit.html" id="NavKul">Kultur</a></li>
-                <li><a href="lit.html" id="NavSam">Samfunn</a></li>
-            </ul>
-       </article>
-
-       <article id="footerEnd"><p>Nettside laget av Anders og frederik<br>Tekst skrevet av Anna og Lisa</p></article>
+        <ul id="footerNav">
+            <li><a href="main.html" id="NavDef">Definisjon</a></li>
+            <li><a href="main.html#Evolusjon" id="NavEvo">Evolusjon</a></li>
+            <li><a href="main.html#Biologi" id="NavBio">Biologi</a></li>
+            <li><a href="main.html#Psykologi" id="NavPsy">Psykologi</a></li>
+            <li><a href="main.html#Kultur" id="NavKul">Kultur</a></li>
+            <li><a href="main.html#Samfunn" id="NavSam">Samfunn</a></li>
+        </ul>
+       <article id="footerEnd"><p>Nettside laget av Anders og Frederik<br>Tekst skrevet av Anna og Lisa</p></article>
    
    </footer>
 </body>
