La til ikon, feilrettinger

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet"> 
-    <title>Hva er et menneske.com</title>
+    <link rel="icon" href="Human_icon.png">
+    <title>Hva er et menneske? | Menneske.com</title>
 </head>
 <body>
     <header>
