--- a/main.html
+++ b/main.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet"> 
-    <title>Hva er et menneske.com</title>
+    <link rel="icon" href="Human_icon.png">
+    <title>Hva er et menneske? | Menneske.com</title>
 </head>
 <body>
     <header>
         <div class="headerContent">
-        <h1 id="logo">Hva er et menneske?</h1>
+            <div id="logo">
+                <img src="Human.png" alt="Mennekse">
+                <h1 id="logo">Hva er et menneske?</h1>
+            </div>
             <ul id="navbar">
                 <li><a href="main.html" id="NavDef">Definisjon</a></li>
                 <li><a href="main.html#Evolusjon" id="NavEvo">Evolusjon</a></li>
