Satt inn litt tekst

--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
     </div>
 
     <section id="Definisjon">
-        <h3 class="sectionTitle">Dyret menneske</h3>
+        <h2 class="sectionTitle">Dyret menneske</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi laudantium impedit excepturi consequatur odit labore, nihil mollitia assumenda sapiente sit aut incidunt molestias? Facilis nihil recusandae sapiente itaque rem perferendis corrupti officiis iusto in saepe! Commodi veniam itaque ipsa cupiditate, deleniti non voluptate error dicta minima similique nulla sapiente? Deserunt voluptas id modi corrupti eligendi nemo iusto illum qui enim, et corporis nam voluptatibus in sapiente? Molestiae adipisci iste voluptate ipsam dolore possimus asperiores eius quae quo enim. Nulla ratione iste perferendis eligendi optio neque iure unde maxime, dolores odio quo molestiae pariatur perspiciatis? Repudiandae assumenda dolore perferendis voluptates, impedit, sunt expedita et quasi amet corrupti possimus. Corrupti dignissimos et placeat! Recusandae perspiciatis quas porro, suscipit assumenda ab cum! Perspiciatis sunt impedit, doloremque ad corporis autem, animi ipsa deleniti tenetur vitae hic dicta quo placeat totam dolorem voluptate veniam aut praesentium voluptatibus maiores. Inventore nobis recusandae eos labore quidem cupiditate.</p>
         <article class="tekstboksSection">
             <div class="tekstboks"><p><b>Mennesket (Homo sapiens)</b> er en art av menneskeapene som går oppreist på to bein. Det har en velutviklet hjerne som gjør språkbruk, abstrakt tenking og selvforståelse  mulig. Disse egenskapene gjør at arten bruker redskaper i større grad enn noen andre.</p></div>
@@ -50,29 +50,29 @@
     </section>
 
     <section id="Evolusjon">
-        <h3 class="sectionTitle">Evolusjon</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi laudantium impedit excepturi consequatur odit labore, nihil mollitia assumenda sapiente sit aut incidunt molestias? Facilis nihil recusandae sapiente itaque rem perferendis corrupti officiis iusto in saepe! Commodi veniam itaque ipsa cupiditate, deleniti non voluptate error dicta minima similique nulla sapiente? Deserunt voluptas id modi corrupti eligendi nemo iusto illum qui enim, et corporis nam voluptatibus in sapiente? Molestiae adipisci iste voluptate ipsam dolore possimus asperiores eius quae quo enim. Nulla ratione iste perferendis eligendi optio neque iure unde maxime, dolores odio quo molestiae pariatur perspiciatis? Repudiandae assumenda dolore perferendis voluptates, impedit, sunt expedita et quasi amet corrupti possimus. Corrupti dignissimos et placeat! Recusandae perspiciatis quas porro, suscipit assumenda ab cum! Perspiciatis sunt impedit, doloremque ad corporis autem, animi ipsa deleniti tenetur vitae hic dicta quo placeat totam dolorem voluptate veniam aut praesentium voluptatibus maiores. Inventore nobis recusandae eos labore quidem cupiditate.</p>
-        <article class="imageSection">
-            <div class="tekst column13"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio sit porro consequuntur vero dolore, laborum ducimus dignissimos veritatis earum, similique natus cum rem aliquid magnam laboriosam delectus dicta ratione. Quas.</p></div>
-            <div class="bilde">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/815Y-3I6fZL._AC_SL1500_.jpg" alt="Leonardo Da Vinci">
-                <p class="bildetekst">Det perfekte mennesket fremstilt av Leonardo Da Vinci</p>
-            </div>
-        </article>
+        <h2 class="sectionTitle">Evolusjon</h2>
+        <p>Dette finnes flere teorier om menneskets oppståelse, men den mest troverdige må være Charles Darwins evolusjonsteori. Den går ut på at menneskene stammer fra apene, og har naturlig utviklet seg til mennesker over tid. De fleste religionene har sin egen teori om menneskets opprinnelse. Et eksempel er kristendommen, hvor man tror på teorien om at Adam og Eva var de første menneskene, og de ble skapt av Gud.</p>
     </section>
 
     <section id="Biologi">
-        <h3 class="sectionTitle">Biologi</h3>
+        <h2 class="sectionTitle">Biologi</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi laudantium impedit excepturi consequatur odit labore, nihil mollitia assumenda sapiente sit aut incidunt molestias? Facilis nihil recusandae sapiente itaque rem perferendis corrupti officiis iusto in saepe! Commodi veniam itaque ipsa cupiditate, deleniti non voluptate error dicta minima similique nulla sapiente? Deserunt voluptas id modi corrupti eligendi nemo iusto illum qui enim, et corporis nam voluptatibus in sapiente? Molestiae adipisci iste voluptate ipsam dolore possimus asperiores eius quae quo enim. Nulla ratione iste perferendis eligendi optio neque iure unde maxime, dolores odio quo molestiae pariatur perspiciatis? Repudiandae assumenda dolore perferendis voluptates, impedit, sunt expedita et quasi amet corrupti possimus. Corrupti dignissimos et placeat! Recusandae perspiciatis quas porro, suscipit assumenda ab cum! Perspiciatis sunt impedit, doloremque ad corporis autem, animi ipsa deleniti tenetur vitae hic dicta quo placeat totam dolorem voluptate veniam aut praesentium voluptatibus maiores. Inventore nobis recusandae eos labore quidem cupiditate.</p>
-        <article class="imageSection">
-            <div class="tekst column13"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio sit porro consequuntur vero dolore, laborum ducimus dignissimos veritatis earum, similique natus cum rem aliquid magnam laboriosam delectus dicta ratione. Quas.</p></div>
-            <div class="bilde">
-                <img src="https://images-na.ssl-images-amazon.com/images/I/815Y-3I6fZL._AC_SL1500_.jpg" alt="Leonardo Da Vinci">
-                <p class="bildetekst">Det perfekte mennesket fremstilt av Leonardo Da Vinci</p>
-            </div>
-        </article>
     </section>
     
+    <section id="Psykologi">
+        <h2 class="sectionTitle">Psykologi</h2>
+        <h3>Hva er det som gjør et menneske til et menneske i et psykologisk perspektiv?</h3>
+        <p><b>Vi mennesker kan være svært forskjellige, noen er ekstroverte, noen er introverte, noen liker å være ute, mens andre hater det. Men finnes det egentlig noe som tilsier hva et menneske er og hva som skiller et menneske fra en hund eller en delfin annet enn det biologiske?</b><br>
+            I romanen Frankenstein skrevet av Mary Shelley får vi møte Victor Frankenstein, som er en vitenskapsmann. 
+            Frankenstein hadde en drøm om å skape et nytt og bedre menneske, men han feilet og i stedet lagde han et monster. 
+            Han ble skremt over kreasjonen sin og kastet derfor bort monsteret. Monsteret måtte da leve alene, og lære seg ting selv. 
+            Senere lærte han seg blant annet språk av en familie som han fulgte med på, men monsteret var veldig ensomt, og hadde ingen å være med. 
+            Monsteret ble veldig sur på Frankenstein, både fordi han hadde lagd han, men mest fordi han forlot han. 
+            Hver gang noen så monsteret ble de redde, og han ble kastet ut. Derfor tenkte monsteret at han måtte ta hevn på Frankenstein, og en etter en drepte monsteret alle som Frankenstein hadde nær. 
+        </p>
+        <p>BRUH?</p>
+    </section>
+
    <footer>
         <ul id="footerNav">
             <li><a href="main.html" id="NavDef">Definisjon</a></li>
