--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         </div>
         <script src="./questions.js"></script>
     </div>
-    <audio id="myAudio">
-        <source src="alarm.mp3" type="audio">
+    <audio id="myAudio" preload="auto">
+        <source src="alarm.mp3" type="audio/mp3">
     </audio>
 
 
