Oppdatert link til stylequiz.css
Sto type text/css i link til stylequiz.css. Mulig det var problemet.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="stylequiz.css">
+    <link rel="stylesheet" href="stylequiz.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link rel="icon" href="Human_icon.png">
     <title>Hva er et menneske? | Menneske.com</title>
